--- a/testReact/index.html
+++ b/testReact/index.html
@@ -7,10 +7,27 @@
     <title>React</title>
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 </head>
 <body>
-    <div class="test">
-        <h1>Add React</h1>
-    </div>
+    <div id="root"></div>
+    <script type="text/babel">
+        const reactCode = 'ReactJS F8';
+        const ul =
+                    <ul>
+                        <li>React</li>
+                        <li>JavaScript</li>
+                    </ul>;
+        const fragTest = <React.Fragment> 
+                {ul}
+                <h1>Heading 1</h1>
+                <h2>Heading 2</h2>
+
+            </React.Fragment>
+
+        
+        ReactDOM.render(fragTest,document.getElementById('root')) 
+
+    </script>
 </body>
 </html>
